syntax = "proto2";

package com.harborx.mongo.test.v2;

enum MyEnumV2 {
  UNKNOWN = 0;
  V1 = 1;
  V2 = 2;
};

message MyTestV2 {
  optional string hello = 1;
  optional int32 foobar = 2;
  optional int64 bazinga = 3;
  repeated string primitive_sequence = 4;
  repeated MyTestV2 rep_message = 5;
  optional MyTestV2 opt_message = 6;

  map<string, int32> string_to_int32 = 7;
  map<int32, MyTestV2> int_to_mytest = 8;
  repeated MyEnumV2 rep_enum = 9;
  optional MyEnumV2 opt_enum = 10;
  map<int32, MyEnumV2> int_to_enum = 11;
  map<bool, string> bool_to_string = 12;
  map<string, bool> string_to_bool = 13;
  optional bytes opt_bs = 14;
  optional bool opt_bool = 15;

  oneof trick_or_treat {
    int32 trick = 16;
    MyTestV2 treat = 17;
  }

  map<fixed64, bytes> fixed64_to_bytes = 18;
  optional double opt_double = 20;
  optional float opt_float = 21;
};
